Updated flights from ArrayList to HashSet